@@ -1,20 +1,20 @@
-## Migration agent - OS/Tool versions
+## centos-7 agent - OS/Tool versions
 
 | OS / Tool | Version |
 | -----------------|---------|
-| Redhat release <br> (/etc/redhat-release) | CentOS Linux release 7.7.1908 (Core) |
-| OS release <br> (/etc/os-release) |  NAME="CentOS Linux" VERSION="7 (Core)" <br> ID="centos" <br> ID_LIKE="rhel fedora" <br> VERSION_ID="7" <br> PRETTY_NAME="CentOS Linux 7 (Core)" <br> ANSI_COLOR="0;31" <br> CPE_NAME="cpe:/o:centos:centos:7" <br> OME_URL="https://www.centos.org/" <br> BUG_REPORT_URL="https://bugs.centos.org/" <br> CENTOS_MANTISBT_PROJECT="CentOS-7" <br> CENTOS_MANTISBT_PROJECT_VERSION="7" <br> REDHAT_SUPPORT_PRODUCT="centos" <br> REDHAT_SUPPORT_PRODUCT_VERSION="7" |
-| Java | Picked up JAVA_TOOL_OPTIONS: -XX:+IgnoreUnrecognizedVMOptions -XX:+UseContainerSupport -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap <br> Picked up _JAVA_OPTIONS: -XX:MaxRAMPercentage=64.0 <br> openjdk version "1.8.0_242" <br> OpenJDK Runtime Environment (build 1.8.0_242-b08) <br> OpenJDK 64-Bit Server VM (build 25.242-b08, mixed mode) |
-| Git | git version 1.8.3.1 |        
+| OS release <br> (cat /etc/redhat-release) | CentOS Linux release 7.9.2009 (Core) |
+| Java | openjdk version "11.0.10" 2021-01-19 LTS<br>OpenJDK Runtime Environment 18.9 (build 11.0.10+9-LTS)<br>OpenJDK 64-Bit Server VM 18.9 (build 11.0.10+9-LTS, mixed mode, sharing) |
+| Git | git version 1.8.3.1 |
+| SSH | OpenSSH_7.4p1, OpenSSL 1.0.2k-fips  26 Jan 2017 |
+| bash | GNU bash, version 4.2.46(2)-release (x86_64-redhat-linux-gnu) |
+| Wget | GNU Wget 1.14 built on linux-gnu. |
+| cURL | curl 7.29.0 (x86_64-redhat-linux-gnu) libcurl/7.29.0 NSS/3.53.1 zlib/1.2.7 libidn/1.28 libssh2/1.8.0 |
+| GPG | gpg (GnuPG) 2.0.22 |
 | make | GNU Make 3.82 |
 | cmake | cmake version 2.8.12.2 |
-| GCC | gcc (GCC) 4.8.5 20150623 (Red Hat 4.8.5-39) |
+| gcc | gcc (GCC) 4.8.5 20150623 (Red Hat 4.8.5-44) |
 | Python | Python 2.7.5 |
 | Python3 | Python 3.6.8 |
-| perl | This is perl 5, version 16, subversion 3 (v5.16.3) built for x86_64-linux-thread-multi (with 39 registered patches, see perl -V for more detail) |
-| wget | GNU Wget 1.14 built on linux-gnu. |
-| curl | curl 7.29.0 (x86_64-redhat-linux-gnu) libcurl/7.29.0 NSS/3.44 zlib/1.2.7 libidn/1.28 libssh2/1.8.0 <br> Protocols: dict file ftp ftps gopher http https imap imaps ldap ldaps pop3 pop3s rtsp scp sftp smtp smtps telnet tftp <br> Features: AsynchDNS GSS-Negotiate IDN IPv6 Largefile NTLM NTLM_WB SSL libz unix-sockets |
+| Perl | This is perl 5, version 16, subversion 3 (v5.16.3) built for x86_64-linux-thread-multi |
 | metacity | metacity 2.34.13 |
 | mutter | mutter 3.28.3 |
-
-
