@@ -1,18 +1,20 @@
-## Migration agent - OS/Tool versions
+## centos-8 agent - OS/Tool versions
 
 | OS / Tool | Version |
 | -----------------|---------|
-| Redhat release <br> (/etc/redhat-release) | CentOS Linux release 8.2.2004 (Core) |
-| OS release <br> (/etc/os-release) |  NAME="CentOS Linux" VERSION="7 (Core)" <br> ID="centos" <br> ID_LIKE="rhel fedora" <br> VERSION_ID="7" <br> PRETTY_NAME="CentOS Linux 7 (Core)" <br> ANSI_COLOR="0;31" <br> CPE_NAME="cpe:/o:centos:centos:7" <br> OME_URL="https://www.centos.org/" <br> BUG_REPORT_URL="https://bugs.centos.org/" <br> CENTOS_MANTISBT_PROJECT="CentOS-7" <br> CENTOS_MANTISBT_PROJECT_VERSION="7" <br> REDHAT_SUPPORT_PRODUCT="centos" <br> REDHAT_SUPPORT_PRODUCT_VERSION="7" |
-| Java | Picked up JAVA_TOOL_OPTIONS: -XX:+IgnoreUnrecognizedVMOptions -XX:+UseContainerSupport -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap <br> Picked up _JAVA_OPTIONS: -XX:MaxRAMPercentage=64.0 <br> openjdk version "1.8.0_242" <br> OpenJDK Runtime Environment (build 1.8.0_242-b08) <br> OpenJDK 64-Bit Server VM (build 25.242-b08, mixed mode) |
-| Git | git version 2.18.4 |
+| OS release <br> (cat /etc/redhat-release) | CentOS Linux release 8.3.2011 |
+| Java | openjdk version "1.8.0_282"<br>OpenJDK Runtime Environment (build 1.8.0_282-b08)<br>OpenJDK 64-Bit Server VM (build 25.282-b08, mixed mode) |
+| Git | git version 2.27.0 |
+| SSH | OpenSSH_8.0p1, OpenSSL 1.1.1g FIPS  21 Apr 2020 |
+| bash | GNU bash, version 4.4.19(1)-release (x86_64-redhat-linux-gnu) |
+| Wget | GNU Wget 1.19.5 built on linux-gnu. |
+| cURL | curl 7.61.1 (x86_64-redhat-linux-gnu) libcurl/7.61.1 OpenSSL/1.1.1g zlib/1.2.11 nghttp2/1.33.0 |
+| GPG | gpg (GnuPG) 2.2.20 |
 | make | GNU Make 4.2.1 |
 | cmake | cmake version 3.11.4 |
-| GCC | gcc (GCC) 8.3.1 20191121 (Red Hat 8.3.1-5) |
+| gcc | gcc (GCC) 8.3.1 20191121 (Red Hat 8.3.1-5) |
+| Python | /home/jenkins/agent/workspace/jiro_agent_tool_versions_readme_creator@tmp/durable-e70535e3/script.sh: line 33: python: command not found |
 | Python3 | Python 3.6.8 |
-| perl | This is perl 5, version 26, subversion 3 (v5.26.3) built for x86_64-linux-thread-multi (with 51 registered patches, see perl -V for more detail) |
-| wget | GNU Wget 1.19.5 built on linux-gnu. |
-| curl | curl 7.61.1 (x86_64-redhat-linux-gnu) libcurl/7.61.1 OpenSSL/1.1.1c zlib/1.2.11 nghttp2/1.33.0 <br> Protocols: dict file ftp ftps gopher http https imap imaps pop3 pop3s rtsp smb smbs smtp smtps telnet tftp <br> Features: AsynchDNS IPv6 Largefile GSS-API Kerberos SPNEGO NTLM NTLM_WB SSL libz TLS-SRP HTTP2 UnixSockets HTTPS-proxy Metalink |
+| Perl | This is perl 5, version 26, subversion 3 (v5.26.3) built for x86_64-linux-thread-multi |
+| metacity |  |
 | mutter | mutter 3.32.2 |
-
-
